--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,7 @@ dependencies {
 
     implementation 'com.android.support:multidex:1.0.3'
 
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
 
     implementation project(":banner")
     //MVVMHabit
