--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+//使用greendao
+apply plugin: 'org.greenrobot.greendao'
 
 android {
 
@@ -28,6 +30,12 @@ android {
 
         targetCompatibility JavaVersion.VERSION_1_8
 
+    }
+
+    //greendao配置
+    greendao {
+        //版本号，升级时可配置
+        schemaVersion 1
     }
 
     dataBinding{
@@ -71,6 +79,10 @@ dependencies {
 
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation 'com.android.support:design:28.0.0'
+
+    //greendao依赖
+    implementation 'org.greenrobot:greendao:3.2.2'
+
 
     //强大的下拉刷新控件
     implementation 'in.srain.cube:ultra-ptr:1.0.11'
